# wiki-llm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODEX_CONTEXT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prd_vaultmark_markdown_llm_wiki.md  wiki.py
.claude/: settings.local.json
.github/: dependabot.yml
.kiro/: roadmap.md
api/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
api/app/: config.py  indexer.py  main.py  mem_search.py  models.py  s3.py  tree.py  utils.py
api/app/db/: models.py  session.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 0001_create_documents.py
api/app/routers/: docs.py  search.py  vaults.py
api/tests/: conftest.py  test_docs.py  test_vaults.py
docs/: README.md  configuration.md  feature-flags.md  theming.md
infra/: .env.example  docker-compose.yml
ingest/: package.json  tsconfig.json
legacy/: README.md  TODO.md
portal/: WikiLLM Portal (standalone).html  WikiLLM Portal - Bundle Source.html  WikiLLM Portal.html  app.jsx  data.jsx  main.jsx  styles.css  upload.jsx
portal-archive/: app.jsx  chat.jsx  data.jsx  doc-bodies.jsx  index.html  main.jsx
prompts/: query.md
scripts/: parity-bodies.mjs  parity-data.mjs  parity-icons.mjs  parity-step1.mjs  parity-step2.mjs  parity-step3.mjs  parity-step4.mjs  parity-visual.mjs
specs/: curation-pipeline.md  index-md-format.md  phase-2-real-read-path.md  phase-3-ingest-pipeline.md  phase-4-personal-wiki-crud.md  (+5 more)
(+242 files in other folders)
