[project]
name = "api"
version = "0.1.0"
description = "Vaultmark FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "boto3>=1.38.0",
    "python-frontmatter>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.0",
    "moto[s3]>=5.1.0",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.uv.scripts]
dev = "fastapi dev app/main.py"
test = "pytest tests/ -v"
lint = "ruff check app/ tests/"
typecheck = "pyright app/"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
